# sword-coming-viz

./: .gitignore  README.md  entity_resolution.py  extraction_filter.py  knowledge_extraction.py  pyproject.toml  ~$来第三季原著.docx  ~$来第二季原著.docx  剑来第一季原著.doc  剑来第三季原著.docx  剑来第二季原著.docx
chapters/: README.md
data/: book_config.json  chapter_structure_inputs.json  chapter_synopses.json  character_card_images.json  character_visual_profiles.json  entity_display_summaries.json  entity_profile_inputs.json  entity_profiles.before_flash_lite_expanded_backup.json  entity_profiles.json  entity_summary_inputs.json  event_display_catalog.json  event_display_inputs.json  event_dossier_inputs.json  event_dossiers.json  narrative_unit_boundaries.json  narrative_unit_dossier_inputs.json  narrative_unit_quality_audit.json  narrative_units.json  relation_profile_inputs.json  relation_profiles.json  season_overview_audit.json  swordcoming_core_cast.json  swordcoming_manual_overrides.json  unit_progress_index.json  writer_insights.json
model/: __init__.py  event.py  location.py  unified.py  visual_profile.py
prompts/: sys_character_visual_profile.md  sys_entity_display_summary.md  sys_entity_profile_gemini.md  sys_entity_relation_extraction_novel.md  sys_event_dossier_gemini.md  sys_narrative_unit_dossier_gemini.md  sys_relation_profile_gemini.md  user_character_visual_profile.md  user_entity_profile_gemini.md  user_event_dossier_gemini.md  user_narrative_unit_dossier_gemini.md  user_relation_profile_gemini.md
scripts/: __init__.py  _check_event_ids.py  _fix_unicode.py  _fix_unicode2.py  (+37 more)
(+1345 files in other folders)
